Add column photo for product
